--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
 
+    <link rel="shortcut icon" href="img/brand-icon.svg" type="image/x-icon" style="max-height: 100px;">
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/script.js"></script>
     <title>Beady Agency</title>
@@ -98,7 +99,7 @@
         <section id="about" class="reveal">
             <h2 class="h2 gradient-fade">About <span>us</span></h2>
             <article class="about-container flex">
-                <div class="about-txt flex collumn">
+                <div class="about-txt collumn">
                     <p>
                         BEADY AGENCY, A CREATIVE DIGITAL AGENCY FOR MVP’S DIGITAL PRODUCTS. WE ARE SERVING DIGITAL
                         STARTUPS CLIENTS WORLDWIDE.
@@ -112,8 +113,7 @@
 
                 <div class="about-img flex collumn">
                     <!-- colorida -->
-                    <img src="" class="bg-about-colorido" loading="lazy"
-                        alt="formas coloridas">
+                    <img src="" class="bg-about-colorido" alt="formas coloridas" loading="lazy">
 
                     <!-- engrenagens -->
                     <img src="img/about/bg-about-cinza.png" class="bg-about-cinza" loading="lazy"
@@ -322,7 +322,7 @@
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title" id="exampleModalLabel">Join the Newsletter!</h1>
+                    <h3 class="modal-title" id="exampleModalLabel">Join the Newsletter!</h3>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -356,7 +356,6 @@
 
                 <div class="modal-footer">
                     <button type="button" class="button secondary-btn" data-bs-dismiss="modal">Close</button>
-
                 </div>
             </div>
         </div>
